@@ -13,6 +13,7 @@ Verilator 4.211 devel
 
 **Minor:**
 
+* Support unpackes array localparams in tasks/functions (#3078). [Geza Lore]
 * Output files are split based on the set of headers required
   in order to aid incremental compilation via ccache (#3071). [Geza Lore]
 * Parameter values are now emitted as 'static constexpr' instead of enum.
